# Path_Planning_of_a_robot_using_DRL

./: GIT COMMANDS.txt  README.md
drlbot_description/: package.xml  setup.cfg  setup.py
drlbot_description/config/: controller.yaml
drlbot_description/drlbot_description/: PPO.py  cust_env.py  custom_env.ipynb  drl_train.py  stablebaseline.py
drlbot_description/gazebo/: drlbot_materials.gazebo  drlbot_physics.gazebo  drlbot_plugins.gazebo
drlbot_description/launch/: controller.launch.py  display.launch.py  drlbot_simulation.launch.py  gazebo.launch.py  launch_sim.launch.py  multi_robot_scenario.launch.py  rsp.launch.py  testrun.launch.py  training_simulation.launch.py
drlbot_description/meshes/: lidar_1.stl  wheel_caster_1.stl  wheel_left_1.stl  wheel_right_1.stl
drlbot_description/rviz/: drlbot_navigation.rviz
drlbot_description/urdf/: drlbot.trans  drlbot.xacro  materials.xacro
drlbot_description/worlds/: house.world  td3_org.world  world1.world
