<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drlbot_description</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="devgoti1683@gmail.com">dev-ubuntu</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>

  <!-- <build_depend>controller_manager</build_depend> 
  <exec_depend>controller_manager</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>xacro</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
